<resources>
    <string name="app_name">samvel_homework_lesson_12</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="information1">Won\'t be able to recover this file!</string>
    <string name="yes_delete_it">Yes, delete it!</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="deleted">Deleted!</string>
    <string name="information2">Your imaginary file has benn deleted!</string>
    <string name="ok">OK</string>
    <string name="loading">Loading...</string>
    <string name="alert_doalog_1">Alert Dialog 1</string>
    <string name="alert_dialog_2">Alert Dialog 2</string>
    <string name="alert_dialog_3">Alert Dialog 3</string>
    <string name="alert_dialog_4">Alert Dialog 4</string>
    <string name="dumb_button">Dumb Button</string>
    <string name="normal_chips">Normal Chips</string>
    <string name="input_chips">Input Chips</string>
    <string name="choice_chips">Choice Chips</string>
    <string name="filter_chips">Filter Chips</string>
    <string name="action_chips">Action Chips</string>
    <string name="theming_chips">Theming Chips</string>
    <string name="normal_chip_1">Normal Chip 1</string>
    <string name="normal_chip_2">Normal Chip 2</string>
    <string name="normal_chip_3">Normal Chip 3</string>
    <string name="input_chip_1">Input Chip 1</string>
    <string name="input_chip_2">Input Chip 2</string>
    <string name="input_chip_3">Input Chip 3</string>
    <string name="choice_chip_1">Choice Chip 1</string>
    <string name="choice_chip_2">Choice Chip 2</string>
    <string name="choice_chip_3">Choice Chip 3</string>
    <string name="filter_chip_1">Filter Chip 1</string>
    <string name="filter_chip_2">Filter Chip 2</string>
    <string name="filter_chip_3">Filter Chip 3</string>
    <string name="action_chip_1">Action Chip 1</string>
    <string name="action_chip_2">Action Chip 2</string>
    <string name="action_chip_3">Action Chip 3</string>
</resources>