<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_white_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="50dp"
    android:paddingVertical="16dp"
    >
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/info_icon_1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/info_icon"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/are_you_sure_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/info_icon_1"
        android:layout_marginHorizontal="20dp"
        android:text="@string/are_you_sure"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/information1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/are_you_sure_1"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/information1"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yes_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00ff00"
        android:textColor="@color/white"
        android:text="@string/yes_delete_it"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information1" />

</androidx.constraintlayout.widget.ConstraintLayout>